# boro

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md
resources/: config-fragment.md  false-positive-digest-libvirt.md  false-positive-digest-virt-manager.md  false-positive-digest.md  fast-review.md  one-shot-review-libvirt.md  one-shot-review-virt-manager.md  one-shot-review.md  review-validation-findings-kernel.md  review-validation-findings.md  review-validation-qemu.md  stage-00b-upstream-followup.md  stage-03-execution-libvirt.md  stage-03-execution-virt-manager.md  stage-03-execution.md  stage-04-resource-libvirt.md  stage-04-resource-virt-manager.md  stage-04-resource.md  stage-05-locking-libvirt.md  stage-05-locking-virt-manager.md  stage-05-locking.md  stage-06-security-libvirt.md  stage-06-security-virt-manager.md  stage-06-security.md  stage-07-hardware.md  stage-07-portability-libvirt.md  stage-07-portability-virt-manager.md  stage-08-comment-accuracy-libvirt.md  stage-08-comment-accuracy-virt-manager.md  stage-08-comment-accuracy.md  test-boot-review.md  test-build-review.md  test-picker.md  test-plan-picker.md  virtme-ng.md
scripts/: boro-json-view  sync-prompts-from-sashiko.sh  update-subsystem-map-from-sashiko.py
src/: api.rs  apply.rs  checkpatch.rs  claude_cli.rs  cluster.rs  codex_cli.rs  config.rs  diff_index.rs  git.rs  http.rs  kconfig.rs  lore.rs  main.rs  model_timeout.rs  opencode.rs  output.rs  prefetch.rs  process.rs  progress.rs  prompts.rs  snapshot.rs  stages.rs  target.rs  test_boot.rs  test_build.rs  tools.rs  vng.rs  (+2 more)
(+72 files in other folders)
